tests/snapshots/snapshots__fixture_mitt_level2.snap
---
source: tests/snapshots.rs
expression: output
---
index.ts
     1→export type EventType = string | symbol;
     5→export type Handler<T = unknown> = (event: T) => void;
     6→export type WildcardHandler<T = Record<string, unknown>> = (
    12→export type EventHandlerList<T = unknown> = Array<Handler<T>>;
    13→export type WildCardEventHandlerList<T = Record<string, unknown>> = Array<
    18→export type EventHandlerMap<Events extends Record<EventType, unknown>> = Map<
    23→export interface Emitter<Events extends Record<EventType, unknown>> {
    27→	on(type: '*', handler: WildcardHandler<Events>): void;
    33→	off(type: '*', handler: WildcardHandler<Events>): void;
    36→	emit<Key extends keyof Events>(
    37→		type: undefined extends Events[Key] ? Key : never
    38→	): void;
    46→export default function mitt<Events extends Record<EventType, unknown>>(
    47→	all?: EventHandlerMap<Events>
    48→): Emitter<Events> {
