tests/snapshots/snapshots__fixture_mitt_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     9→# Mitt
    21→## Table of Contents
    30→## Install
    56→## Usage
    81→### Typescript
   113→## Examples & Demos
   123→## API
   127→#### Table of Contents
   138→### mitt
   144→### all
   148→### on
   152→#### Parameters
   157→### off
   162→#### Parameters
   167→### emit
   174→#### Parameters
   179→## Contribute
   184→### Reporting Issues
   189→### Submitting pull requests
   203→## License
src/index.ts
     1→export type EventType = string | symbol;
     5→export type Handler<T = unknown> = (event: T) => void;
     6→export type WildcardHandler<T = Record<string, unknown>> = (
     7→	type: keyof T,
     8→	event: T[keyof T]
     9→) => void;
    12→export type EventHandlerList<T = unknown> = Array<Handler<T>>;
    13→export type WildCardEventHandlerList<T = Record<string, unknown>> = Array<
    14→	WildcardHandler<T>
    15→>;
    18→export type EventHandlerMap<Events extends Record<EventType, unknown>> = Map<
    19→	keyof Events | '*',
    20→	EventHandlerList<Events[keyof Events]> | WildCardEventHandlerList<Events>
    21→>;
    23→export interface Emitter<Events extends Record<EventType, unknown>> {
    27→	on(type: '*', handler: WildcardHandler<Events>): void;
    33→	off(type: '*', handler: WildcardHandler<Events>): void;
    36→	emit<Key extends keyof Events>(
    37→		type: undefined extends Events[Key] ? Key : never
    38→	): void;
    46→export default function mitt<Events extends Record<EventType, unknown>>(
    47→	all?: EventHandlerMap<Events>
    48→): Emitter<Events> {
